still has some sizing issues where h1 on welcome page goes up too high

--- a/stylesheets/sass/welcome.scss
+++ b/stylesheets/sass/welcome.scss
@@ -11,18 +11,22 @@
     font-family: lewis;
     src: url('../fonts/lewis/LewisCarroll.ttf');
 }
-html, body {
-	width: 100%;
-	height: 100%;
+body, html {
+    width: 100%;
+    height: 100%;
+}
+body {
+    overflow: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 header {
-    position: fixed;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    top: 15%;
-    left: 25%;
+    border: 3px solid red;
     width: 50%;
     min-height: 75%;
     background-color: rgba(255,255,255,0.6);
@@ -36,6 +40,7 @@ header {
         font-size: 4vw;
         text-align: center;
         font-family: lewis, serif;
+        margin: 5px;
     }
     p {
         font-family: sidhe, serif;
@@ -84,11 +89,13 @@ header {
     p.no-styles {
         font-family: serif;
         font-size: 0.9em;
+        margin: 5px;
         a {
             display: inline;
             text-decoration: underline;
         }
     }
+    p.small {font-size: 0.7em; color: darkgrey;}
     input[type="submit"] {min-width: 20vw;}
     input {
         padding: 5px;
@@ -99,10 +106,7 @@ header {
     }
     
 }
-@media screen and (min-aspect-ratio: 100/75) {
-    $unit: vh;
-	.view {
-        width:100+$unit;
-        height:100+$unit;
-    }
+.errors {
+    color: red;
+    margin-top: 5px;
 }
